# Skillfactory-

./: 01_simple.py  03_baseline.py  CR  CRIPTO_BOT  CTYPTO_BOT.py  Game 2.py  Game1.py  README.md  Rrrrrr  Telegram.html  config.py  main.py  pyproject.toml  replit_zip_error_log.txt
modul5/5.2 переменные итипы данных/: 5.2.12.py
modul5/5.3 условия и циклы/: 5.3.2.py  5.3.3.py
project/: db.sqlite3
project/project/: settings.py  urls.py
project_2/project_2/: settings.py  urls.py
project_3/project_3/: settings.py  urls.py
